@@ -1,5 +1,13 @@
 2008-04-29  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
+	* include/openbabel/mol.h: Add units to documentation for
+	GetTorsion/SetTorsion.
+
+	* tools/obrotate.cpp: Total review of the code. Thanks to Josep Maria
+	and Noel for pointing out the problems.
+
+2008-04-29  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
 	* src/mol.cpp: Added UnsetSSSRPerceived to all OBMol::Delete*()
 	functions. (not DeleteConformer(int i), doesn't change rings... )
 
